--- a/gradle.properties
+++ b/gradle.properties
@@ -44,7 +44,7 @@ mapping_version=2024.04.14-1.20.4
 # Must match the String constant located in the main mod class annotated with @Mod.
 mod_id=stonecraft
 # The human-readable display name for the mod.
-mod_name=StoneCraft
+mod_name=Stonecraft
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=MIT
 # The mod version. See https://semver.org/
@@ -52,8 +52,8 @@ mod_version=0.1-1.20.4
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
-mod_group_id=net.pranav.stonecraft
+mod_group_id=net.darkmass.stonecraft
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=MassGaming_001,DarkWhite101_
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=
+mod_description= dr stone in minecraft
